 - GBA Video: Fix blend issues with obscured middle layers
 - Video: Ensure FFmpeg encoder has audio frames
 - Video: Fix uncompressed PCM audio recording
 - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
 - Debugger: Align PC-relative loads in Thumb
 - Debugger: Fix watchpoints triggering too late
 - GBA Video: Fix sprite mis-ordering behavior in some cases (fixes #168)
 - GBA Video: Fix window interactions with 16-color mode 0 mosaic
 - GBA Video: Fix sprite boundary conditions with mosaic
 - Video: Fix FFmpeg crashing when the file extension is wrong
 - GBA Audio: Fix GB audio channels being too quiet (fixes #159)
 - Qt: Fix a race condition when a game crashes immediately
 - Qt: Fix some cases where key mapping can break if focus is adjusted
 - GBA Memory: Filter out top nybble of DMA addresses
 - Debugger: Fix binary print putting spaces between digits
 - GBA BIOS: Fix LZ77UnCompVram to use 16-bit loads from decompressed memory
 - GBA BIOS: Fix HuffUnComp to work when games pass an invalid bit length
 - GBA BIOS: Fix GetBiosChecksum to return the value of a real GBA, regardless of used BIOS
 - GBA Memory: Properly bounds-check VRAM accesses
 - GBA Memory: Fix initial DMA state
 - GBA BIOS: Fix BIOS prefetch after returning from an IRQ
 - GBA BIOS: Fix BIOS prefetch after reset
Misc:
 - Qt: Disable sync to video by default
 - GBA: Exit cleanly on FATAL if the port supports it
 - Qt: Handle a game crash without crashing
 - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
 - Qt: Set default log level to FATAL, ERROR and WARN
 - Qt: Clarify some phrasing in the menus
 - GBA Memory: Implement 16- and 32-bit loads from SRAM
 - Qt: Clear active buttons when focus is lost
 - GBA Memory: Simplify memory API and use fixed bus width
 - GBA Video: Start video at the last scanline instead of the first
 - Debugger: Watchpoints now work on STM/LDM instructions

0.1.0: (2014-12-13)
 - Initial release