@@ -57,6 +57,7 @@ Bugfixes:
  - GBA Memory: Fix initial DMA state
  - GBA BIOS: Fix BIOS prefetch after returning from an IRQ
  - GBA BIOS: Fix BIOS prefetch after reset
+ - GBA Memory: Fix alignment of open bus 8- and 16-bit loads
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
